Changed chart name

--- a/jupyter-notebooks/XLM.ipynb
+++ b/jupyter-notebooks/XLM.ipynb
@@ -343,7 +343,7 @@
     "    'XLM',\n",
     "    fmt='--',\n",
     "    plot_pct=True,\n",
-    "    out_name='XML_short',\n",
+    "    out_name='XLM_short',\n",
     ");"
    ]
   },
@@ -532,7 +532,7 @@
     "    'XLM',\n",
     "    fmt='--',\n",
     "    plot_pct=True,\n",
-    "    out_name='XML_long_pct',\n",
+    "    out_name='XLM_long_pct',\n",
     ");"
    ]
   },
@@ -563,7 +563,7 @@
     "    'XLM',\n",
     "    fmt='--',\n",
     "    plot_pct=False,\n",
-    "    out_name='XML_long',\n",
+    "    out_name='XLM_long',\n",
     ");"
    ]
   },
